--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Face Recognition</title>
 		<script src="face-api.js"></script>
+		<style>
+			body {
+				margin: 0;
+				padding: 0;
+				height: 100vh;
+				width: 100vw;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+			}
+			canvas {
+				position: absolute;
+			}
+		</style>
 	</head>
 	<body>
 		<video id="video" width="720" height="560" autoplay muted></video>
